--- a/partsware/parts/templates/parts/base.html
+++ b/partsware/parts/templates/parts/base.html
@@ -1,38 +1,24 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        {# required meta tags #}
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends 'base.html' %}
+{% load static %}
 
-        {# bootstrap css #}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+{% block styles %}
+<link rel="stylesheet" href="{% static "parts/css/base.css" %}">
+{% endblock %}
 
-        {# custom styles #}
-        {% load static %}
+{% block content %}
 
-        <link rel="stylesheet" href="{% static "parts/css/base.css" %}">
-        {% block styles %}{% endblock %}
+<header class="bg-dark text-light navbar">
+    <h1 class="navbar-brand" >PartsWare</h1>
 
-        <title>{% block title %}{% endblock %}</title>
-    </head>
-    <body>
-        <header class="bg-dark text-light navbar">
-            <h1 class="navbar-brand" >PartsWare</h1>
+    <ol class="nav">
+        <li class="nav-item">
+            <a class="nav-link text-light" href="{% url 'parts:index' %}">Index</a>
+        </li>
+    </ol>
+</header>
 
-            <ol class="nav">
-                <li class="nav-item">
-                    <a class="nav-link text-light" href="{% url 'parts:index' %}">Index</a>
-                </li>
-            </ol>
-        </header>
-        <div class="container">
-            {% block content %}{% endblock %}
-        </div>
+<div class="container">
+    {% block parts_content %}{% endblock %}
+</div>
 
-        {# bootstrap js #}
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
-    </body>
-</html>
+{% endblock %}
