--- a/partsware/parts/templates/parts/index.html
+++ b/partsware/parts/templates/parts/index.html
@@ -1,6 +1,6 @@
 {% extends 'parts/base.html' %}
 
-{% block content %}
+{% block parts_content %}
 
 <div class="p-5 row">
     <div class="col-md-4">
@@ -19,11 +19,7 @@
                 <div class="card-body">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">Total parts: {{ parts.count }}</li>
-                    </ul>
-                    <ul class="list-group list-group-flush">
                         <li class="list-group-item">Total containers: {{ containers.count }}</li>
-                    </ul>
-                    <ul class="list-group list-group-flush">
                         <li class="list-group-item">Total tags: {{ tags.count }}</li>
                     </ul>
                 </div>
