--- a/partsware/parts/templates/parts/base.html
+++ b/partsware/parts/templates/parts/base.html
@@ -7,15 +7,30 @@
 
 {% block content %}
 
-<header class="bg-dark text-light navbar">
-    <h1 class="navbar-brand" >PartsWare</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <ol class="nav">
-        <li class="nav-item">
-            <a class="nav-link text-light" href="{% url 'parts:index' %}">Index</a>
-        </li>
-    </ol>
-</header>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <a class="navbar-brand">PartsWare</a>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'parts:index' %}">Index</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0" method="post" action="{% url 'parts:search' %}">
+            {% csrf_token %}
+            <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
 
 <div class="container">
     {% block parts_content %}{% endblock %}
