added add new part view

--- a/partsware/parts/templates/parts/base.html
+++ b/partsware/parts/templates/parts/base.html
@@ -18,10 +18,19 @@
         <a class="navbar-brand">PartsWare</a>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'parts:index' %}">Index</a>
+                <a class="nav-link" href="{% url 'parts:index' %}">
+                    Index
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'parts:add_container' %}">Add container</a>
+                <a class="nav-link" href="{% url 'parts:add_part' %}">
+                    Add part
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'parts:add_container' %}">
+                    Add container
+                </a>
             </li>
         </ul>
 
