--- a/partsware/parts/templates/parts/bs_form_input.html
+++ b/partsware/parts/templates/parts/bs_form_input.html
@@ -2,7 +2,7 @@
 
 <div class="form-group">
     {{ field.label_tag }}
-    {{ field|add_class:'form-control' }}
+    {{ field|add_class:bs_class }}
 
     {% for error in field.errors %}
     <div class="alert alert-danger">{{ error }}</div>
