add image to form

--- a/partsware/parts/templates/parts/part.html
+++ b/partsware/parts/templates/parts/part.html
@@ -32,6 +32,7 @@ Edit part
         <div class="form-row">
             <div class="col">
                 {% form_input form.name %}
+                {% form_input form.image %}
                 {% form_input form.datasheet %}
                 {% form_input form.pinout %}
             </div>
