added tags functionality

--- a/partsware/parts/templates/parts/part.html
+++ b/partsware/parts/templates/parts/part.html
@@ -38,6 +38,7 @@ Edit part
             </div>
 
             <div class="col">
+                {% form_input form.tags %}
                 {% form_input form.description %}
             </div>
         </div>
