added edit part view

--- a/partsware/parts/templates/parts/container.html
+++ b/partsware/parts/templates/parts/container.html
@@ -11,7 +11,7 @@ Edit container
 
 {% block parts_content %}
 
-<div class="container">
+<div class="container p-3">
     <div class="row p-3">
         {% if new_container %}
         <h3>Add new container</h3>
