--- a/partsware/templates/base.html
+++ b/partsware/templates/base.html
@@ -7,6 +7,7 @@
 
         {# bootstrap css #}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
 
         {# custom styles #}
         {% block styles %}{% endblock %}
