search bar use search icon

--- a/partsware/parts/templates/parts/base.html
+++ b/partsware/parts/templates/parts/base.html
@@ -31,7 +31,9 @@
         <form class="form-inline my-2 my-lg-0" method="post" action="{% url 'parts:search' %}">
             {% csrf_token %}
             <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+                <i class="fa fa-search"></i>
+            </button>
         </form>
     </div>
 </nav>
