added part view page

--- a/partsware/parts/templates/parts/part.html
+++ b/partsware/parts/templates/parts/part.html
@@ -25,7 +25,7 @@ Edit part
         <div class="col">
             <div class="text-right">
                 <a href="{% url 'parts:delete_part' part.pk %}" class="btn btn-danger">
-                    Delete
+                    <i class="fa fa-trash"></i> Delete
                 </a>
             </div>
         </div>
