--- a/partsware/parts/templates/parts/search.html
+++ b/partsware/parts/templates/parts/search.html
@@ -16,7 +16,9 @@ No parts found
     <div class="col-sm-3">
         <div class="card mb-4">
             <div class="card-header">
-                <strong>{{ part.name }}</strong>
+                <a href="{% url 'parts:view_part' part.pk %}" class="text-body">
+                    <strong>{{ part.name }}</strong>
+                </a>
                 <div class="float-right">
                     <a href="{% url 'parts:edit_part' part.pk %}" title="Edit">
                         <i class="fa fa-edit"></i>
