added all parts url

--- a/partsware/parts/templates/parts/base.html
+++ b/partsware/parts/templates/parts/base.html
@@ -17,6 +17,11 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'parts:all_parts' %}">
+                    All parts
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'parts:add_part' %}">
                     Add part
                 </a>
