--- a/partsware/parts/templates/parts/search.html
+++ b/partsware/parts/templates/parts/search.html
@@ -2,8 +2,32 @@
 
 {% block parts_content %}
 
-<div class="p-3">
-    <h3>Search results</h3>
+<div class="row p-3">
+    <div class="col-md-8">
+        <h3>Search results</h3>
+    </div>
+
+    <div class="col-md-4">
+        <form class="form" method="post" action="{% url 'parts:search' %}">
+            {% csrf_token %}
+
+            <input name="search" type="hidden" value="{{ query }}">
+
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <div class="input-group-text">
+                        Order by
+                    </div>
+                </div>
+
+                <select name="sort-by" onchange="this.form.submit()" id="order-by-select" class="form-control">
+                    <option selected disabled hidden>Choose option</option>
+                    <option value="name">Name</option>
+                    <option value="container">Container</option>
+                </select>
+            </div>
+        </form>
+    </div>
 </div>
 
 {% if not parts %}
