--- a/partsware/parts/templates/parts/search.html
+++ b/partsware/parts/templates/parts/search.html
@@ -24,6 +24,8 @@
                     <option selected disabled hidden>Choose option</option>
                     <option value="name">Name</option>
                     <option value="container">Container</option>
+                    <option value="quantity">Quantity</option>
+                    <option value="price">Price</option>
                 </select>
             </div>
         </form>
@@ -37,8 +39,8 @@ No parts found
 <div class="row">
     {% for part in parts %}
 
-    <div class="col-sm-3">
-        <div class="card mb-4">
+    <div class="col-sm-3 mb-3">
+        <div class="card">
             <div class="card-header">
                 <a href="{% url 'parts:view_part' part.pk %}" class="text-body">
                     <strong>{{ part.name }}</strong>
@@ -57,6 +59,13 @@ No parts found
             <div class="card-body">
                 <h6 class="card-subtitle text-muted mb-2">
                     {{ part.container }}: {{ part.location }}
+                </h6>
+
+                <h6 class="card-subtitle text-muted mb-2">
+                    Quantity: {{ part.quantity }}
+                    {% if part.price %}
+                    @ {{ part.price }}
+                    {% endif %}
                 </h6>
 
                 <p class="card-text">
