--- a/partsware/parts/templates/parts/base.html
+++ b/partsware/parts/templates/parts/base.html
@@ -31,6 +31,11 @@
                     Add container
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'parts:list_containers' %}">
+                    Containers
+                </a>
+            </li>
         </ul>
 
         {% if not no_nav_search %}
