--- a/partsware/parts/templates/parts/search.html
+++ b/partsware/parts/templates/parts/search.html
@@ -39,7 +39,7 @@ No parts found
 <div class="row">
     {% for part in parts %}
 
-    <div class="col-sm-3 mb-3">
+    <div class="col-6 col-md-3 col-lg-2 mb-3">
         <div class="card">
             <div class="card-header">
                 <a href="{% url 'parts:view_part' part.pk %}" class="text-body">
