--- a/partsware/templates/base.html
+++ b/partsware/templates/base.html
@@ -12,7 +12,7 @@
         {# custom styles #}
         {% block styles %}{% endblock %}
 
-        <title>{% block title %}{% endblock %}</title>
+        <title>PartsWare | {% block title %}{% endblock %}</title>
     </head>
     <body>
         {% block content %}{% endblock %}
