misc small fixes

--- a/partsware/parts/templates/parts/index.html
+++ b/partsware/parts/templates/parts/index.html
@@ -1,6 +1,6 @@
 {% extends 'parts/base.html' %}
 
-{% block title %}Index{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block parts_content %}
 
