--- a/partsware/parts/templates/parts/search.html
+++ b/partsware/parts/templates/parts/search.html
@@ -94,7 +94,7 @@ No parts found
                     {% endif %}
                 </div>
 
-                <p class="card-text">
+                <p class="mt-2 card-text">
                 {{ part.description | truncatechars:50 }}
                 </p>
             </div>
