--- a/partsware/templates/registration/login.html
+++ b/partsware/templates/registration/login.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="{% static "css/login.css" %}">
 {% endblock %}
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
 
 <div class="container">
